<resources>
    <string name="app_name">ELoan</string>
    <string name="login">LOGIN</string>
    <string name="sing_up">SING UP</string>
    <string name="friends">FRIENDS</string>
    <string name="items">ITEMS</string>
    <string name="loans">LOANS</string>
    <string name="logoPortada">Logotipo de la aplicación en la pantalla de login</string>
    <string name="iloanDB">iloan.db</string>
    <string name="name_hint">Name</string>
    <string name="title">Title</string>
    <string name="kind">Kind</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="add_button">Add button</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="imagen">Imagen:</string>
    <string name="back_button">Back button</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="image">Image</string>
    <string name="add">Add</string>
    <string name="in_date">In date</string>
    <string name="start_loan_date">Start loan date</string>
    <string name="set_end_loan_date">Set end loan date.</string>
    <string name="comments">Comments</string>
    <string name="loan_title">LOAN</string>
    <string name="end_date">End date</string>
    <string name="click_on_image_to_set">Click on image to set</string>
    <string name="press_here_to_set_image">Press here to set image</string>
    <string name="menu">Menu</string>
    <string name="delete_button">Delete button</string>
    <string name="click_to_set_image">Click to set image</string>
    <string name="add_friend">add friend</string>
    <string name="click_here_to_call">Click here to call</string>
    <string name="add_item">add item</string>
</resources>
