<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="554dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            android:layout_width="368dp"
            android:layout_height="485dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_loan_card"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/logoPortada"
                    app:srcCompat="@drawable/iloan_logo" />

                <TextView
                    android:id="@+id/loan_title_loan_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loan_title"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/in_date_loan_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/in_date"
                        android:textAlignment="center"
                        android:textColor="@color/primary_text"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/end_date_loan_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/end_date"
                        android:textAlignment="center"
                        android:textColor="@color/primary_text"
                        android:textSize="15sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/friend_title_friend_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friends"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/friend_name_loan_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textColor="@color/primary_text"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/phone_button_loan_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone" />
                </LinearLayout>

                <TextView
                    android:id="@+id/item_title_loan_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/items"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/title_item_loan_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title"
                        android:textColor="@color/primary_text"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/kind_loan_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/kind"
                        android:textColor="@color/primary_text"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/genre_loan_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/genre"
                        android:textColor="@color/primary_text"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/item_button_loan_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/items" />
                </LinearLayout>

                <TextView
                    android:id="@+id/comments_loan_card"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/comments" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</android.support.constraint.ConstraintLayout>