<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".views.LoanCardView">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="427dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/primary_light"
        android:background="@color/primary_light"
        android:paddingEnd="10dp"
        android:paddingStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/custom3"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_loan_card_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/logoPortada"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/iloan_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/in_date_loan_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/in_date"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/end_date_loan_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_date"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/friend_name_loan_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/primary_text"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/phone_button_loan_card_view"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/custom"
                    android:text="@string/phone" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/title_item_loan_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title"
                    android:textColor="@color/primary_text"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/item_button_loan_card_view"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/custom"
                    android:text="@string/items" />

            </LinearLayout>

            <TextView
                android:id="@+id/comments_loan_card_view"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp"
                android:text="@string/comments" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/back_button_loan_card"
        android:layout_width="66dp"
        android:layout_height="47dp"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_button"
        android:contentDescription="@string/delete_button"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageButton
        android:id="@+id/delete_button_loan_card"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/delete_button"
        android:src="@drawable/delete_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</android.support.constraint.ConstraintLayout>