<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom3"
    tools:context=".views.ILoans">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="361dp"
        android:layout_height="438dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/primary_light"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_add_loan"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/primary_light"
            android:contentDescription="@string/logoPortada"
            app:srcCompat="@drawable/iloan_logo" />

        <EditText
            android:id="@+id/start_loan_add_loan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_loan_date"
            android:inputType="none" />

        <EditText
            android:id="@+id/end_loan_add_loan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_end_loan_date"
            android:inputType="none" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_id_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/spinner_id_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <EditText
            android:id="@+id/comments_add_loan"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/comments"
            android:inputType="textShortMessage"
            android:maxLines="4" />

        <Button
            android:id="@+id/image_loan_add_loan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_light"
            android:hint="@string/press_here_to_set_image" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/add_loan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/plus_icon"
        android:contentDescription="@string/logoPortada"
        android:background="@color/custom"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</android.support.constraint.ConstraintLayout>